# se-backend

./: .env  Cargo.toml  migration.ps1
migrations/2021-05-22-140737_users/: up.sql
migrations/2021-05-22-140741_doctors/: up.sql
migrations/2021-05-22-140755_administators/: down.sql  up.sql
migrations/2021-05-22-140803_comments/: up.sql
migrations/2021-05-22-140807_appointments/: up.sql
migrations/2021-05-22-140810_times/: up.sql
migrations/2021-05-26-094633_departments/: up.sql
migrations/2021-05-26-094637_user_logins/: down.sql  up.sql
migrations/2021-05-26-094641_doctor_logins/: down.sql  up.sql
migrations/2021-05-26-094645_admin_logins/: down.sql  up.sql
src/: main.rs  protocol.rs  schema.rs  utils.rs
src/admin/: mod.rs  requests.rs  responses.rs  utils.rs
src/database/: assert.rs  mod.rs
src/doctor/: mod.rs  requests.rs  responses.rs  utils.rs
src/models/: admin_logins.rs  administrators.rs  appointments.rs  comments.rs  departments.rs  doctor_logins.rs  doctors.rs  mod.rs  times.rs  user_logins.rs  users.rs
src/user/: mod.rs  requests.rs  responses.rs  utils.rs
